# ragstack-starter-app

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/docs/: installation.rst
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: main.py  scratch.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/generation/: query_loop.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/retrieval/: chains.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/streamlit/: streamlit_app.py
